--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,488 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&family=Nova+Round&display=swap");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+    --background: #D9AFD9;
+    --background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+    --year:  rgb(14, 64, 107);
+    --langue:  rgb(129, 83, 83);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  /* ********************************PAGE DE BASE******************************** */
+  a {
+    text-decoration: none;
+    color: #333;
+    /* cursor: pointer; */
+    font-family: 'Josefin Sans', serif;
   }
-  to {
-    transform: rotate(360deg);
+  li{
+    list-style-type: none;
   }
+  /* pour que les pages passent du bas à sur le côté */
+  .home, .CenterOfInterest, .info-perso, .knowledges, .skill, .SoftSkills{
+    display: flex;
+  }
+  /* pour l'espace entre la navigation et la page */
+  .soft-skills, .formation-pro, .perso, .knoledgesContent, .skill-list, .soft-skills{
+    margin-left: .4rem;
+  }
+/**********************************************************************/
+/************************DEBUT HEADER**********************************/
+/**********************************************************************/
+.all-header{
+    width: 100%;
+    height: 10rem;
+    background-image: var(--background-image);
 }
+.header{
+    display: flex;
+    justify-content: space-around;
+}
+.titre-header{
+    font-family: 'Josefin Sans', serif;
+    font-size: 2.5rem;
+    margin-top: 1.6rem;
+    color: #484848;
+    display: flex;
+}
+.identite-header{
+    font-family: 'Dosis', sans-serif;
+    font-size: 4.5rem;
+}   
+.presentation-header{
+    margin-top: 1rem;
+    font-size: 1.3rem;
+    margin-left: 2rem;
+} 
+.titre-header .ecart{
+    padding-left: .7rem;
+}
+.titre-header .lettre{
+    position: relative;
+    display: inline-block; 
+    /* padding: .2rem; */
+}
+.titre-header .lettre::after{
+    content: attr(data-letter);
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    color: #fff900;
+    text-shadow: 
+    0 0 2px #fff900,
+    0 0 10px #fff900;
+    opacity: 0;
+    animation: blinking 1.75s ease-in-out infinite; 
+}
+@keyframes blinking {
+    0% {
+        opacity: 0;
+    }
+    30% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+}
+/**********************************************************************/
+/***************************FIN HEADER*********************************/
+/**********************************************************************/
+
+/**********************************************************************/
+/***************************DEBUT DE LA NAVBARRE***********************/
+/**********************************************************************/
+
+.sidebar-navigation{
+    background-image: var(--background-image);
+    font-family: "Nova Round", cursive;
+    min-height: 95vh;
+    width: 310px;
+    position: relative;
+    /* display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 250px 1fr 108px;
+    grid-template-areas:
+          "1"; */
+}
+.navigation{
+    /* grid-area: 1; */
+    padding: 2rem 1rem; 
+}
+.navigation span {
+    height: 100%;
+    display: grid;
+    justify-content: space-evenly;
+}
+.navigation i{
+    padding: 1rem 0 1rem 0.4rem;
+    font-size: 1.3rem;
+    position: relative;
+ }
+ /* pour aligner les icone avec les titres */
+.navigation ul {
+    height: 100%;
+    display: grid;
+}
+.navigation ul li {
+    padding: 1rem 0 1rem 0.4rem;
+    font-size: 1.3rem;
+    position: relative;
+    /* list-style-type:none; */
+  }
+  /* mouvement des icons */
+.navigation ul li:hover i {
+    transform: translate(5px, 5px);
+  }
+  /* mouvement des icons */
+.navigation ul li i {
+    position: absolute;
+    font-size: 1.5rem;
+    transform: translateY(10px);
+    transition: 0.2s ease;
+    margin-top: -1.3rem;
+  }
+  .navActive{
+    color: #2a1d52;
+  }
+.navigation ul li span {
+    margin-left: 1.7rem;
+    width: 16rem;
+}
+/**********************************************************************/
+/***************************DEBUT DE LA NAVBARRE***********************/
+/**********************************************************************/
+
+/***********************************************************************/
+/***********************DEBUT DE INFORMATIQUE***************************/
+/***********************************************************************/
+  /* ça prend toute la page */
+  .knoledgesContent{
+    min-height: 20rem;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+ }
+  .languagesFrameworks{
+background: var(--background-image);
+}
+/* titre de informatique */
+.ProgressBar-title{
+    font-size: 1.4rem;
+    padding-top: .5rem;
+    margin-bottom: 1rem;
+    font-family: 'Dosis', sans-serif;
+    color: #333;
+    text-transform: uppercase;
+}
+.languagesFrameworks{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 
+    "L"
+    "F";
+}
+.languagesDisplay{
+    grid-area: L;
+}
+.frameworkDisplay{
+    grid-area: F;
+}
+.years{
+    font-size: 1.25rem;
+    display: flex;
+    justify-content: space-between;
+    color: var(--year);
+}
+.exper{
+    width: 36%;
+}
+/* l'espace qui separent les années */
+.exper:nth-child(2){
+    text-align: right;
+    width: 20%;
+}
+.exper:nth-child(3){
+    text-align: center;
+    width: 40%;
+}
+/* la longueur des barres qui descendent  */
+.exper:nth-child(2)::before,
+.exper:nth-child(3)::before{
+  content: "";
+  background: rgba(180, 179, 179, 0.5); 
+  position: absolute;
+  height: 100px;
+  width: 3px; 
+  transform: translate(9px, 19px);
+}
+.languagesList{
+   padding-top: 1rem; 
+}
+.languagesProgres{
+  color:  var(--langue);  
+}
+/* progession de la barre d'expérience */
+.progressBar{
+    height: .9rem;
+    background: transparent;
+    border-radius: 50px;
+    margin-top: 1.4rem;
+    position: relative;
+}
+.progressBar::after{
+   content: "";
+   position: absolute;
+   background: #2a1d52;
+   border-radius: 50px;
+   height: .4rem;
+   /* la with est à 0 pour créer l'animation */
+   width: 0; 
+   /* forwards pour dire que l'animation ne disparait pas */
+   animation: line 2s ease-out forwards;
+}
+@keyframes line{
+  to{
+    width: 100%;
+  }  
+}
+/***********************************************************************/
+/***********************FIN DE INFORMATIQUE*****************************/
+/***********************************************************************/
+
+/****************************************************************************/
+/***********************DEBUT DE INFO PERSONNELLES***************************/
+/****************************************************************************/
+.perso{
+    background: rgb(99, 164, 233);
+    width: 100%;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 26% 45% 35%;
+    grid-template-areas: 
+      "1"
+      "2"
+      "3";  
+}
+.header-perso {
+    grid-area: 1;
+    width: 100%;
+    position: relative;
+    background-image: radial-gradient(circle at 50% 56%, hsla(16,0%,59%,0.1) 0%, hsla(16,0%,59%,0.1) 13%,transparent 13%, transparent 44%,transparent 44%, transparent 100%),radial-gradient(circle at 75% 75%, hsla(16,0%,59%,0.1) 0%, hsla(16,0%,59%,0.1) 26%,transparent 26%, transparent 57%,transparent 57%, transparent 100%),radial-gradient(circle at 43% 6%, hsla(16,0%,59%,0.1) 0%, hsla(16,0%,59%,0.1) 29%,transparent 29%, transparent 92%,transparent 92%, transparent 100%),radial-gradient(circle at 39% 61%, hsla(16,0%,59%,0.1) 0%, hsla(16,0%,59%,0.1) 44%,transparent 44%, transparent 83%,transparent 83%, transparent 100%),radial-gradient(circle at 5% 14%, hsla(16,0%,59%,0.1) 0%, hsla(16,0%,59%,0.1) 46%,transparent 46%, transparent 99%,transparent 99%, transparent 100%),linear-gradient(362deg, rgb(10, 22, 107),rgb(62,67,176));
+    height: 340px;
+}
+.header-perso::before{
+    content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      background: url(../src/media/map.jpg)no-repeat center top/cover;
+      filter: grayscale(100%);  
+}
+.header-perso::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 30px;
+    background: url(../src/media/shape.svg)no-repeat center /cover;
+}
+.contactBox {
+    grid-area: 2;
+    background: radial-gradient(circle at 25% 54%, rgba(18, 18, 18,0.06) 0%, rgba(18, 18, 18,0.06) 22%,transparent 22%, transparent 100%),radial-gradient(circle at 67% 98%, rgba(223, 223, 223,0.06) 0%, rgba(223, 223, 223,0.06) 52%,transparent 52%, transparent 100%),radial-gradient(circle at 7% 92%, rgba(169, 169, 169,0.06) 0%, rgba(169, 169, 169,0.06) 52%,transparent 52%, transparent 100%),radial-gradient(circle at 46% 37%, rgba(187, 187, 187,0.06) 0%, rgba(187, 187, 187,0.06) 47%,transparent 47%, transparent 100%),radial-gradient(circle at 38% 35%, rgba(57, 57, 57,0.06) 0%, rgba(57, 57, 57,0.06) 99%,transparent 99%, transparent 100%),radial-gradient(circle at 46% 86%, rgba(100, 100, 100,0.06) 0%, rgba(100, 100, 100,0.06) 60%,transparent 60%, transparent 100%),linear-gradient(90deg, rgb(57, 8, 200),rgb(240, 145, 202));;
+    margin: 0 auto;
+    padding: 1rem 3rem;
+    z-index: 2;
+    border-radius: 25px;
+    box-shadow: 0 3px 10px #333;
+    width: 50%;
+    min-width: 440px;
+    min-height: 200px;
+}
+.contactBox .ProgressBar-contact{
+    display: flex;
+    justify-content: center;
+    font-size: 1.4rem;
+    font-family: 'Dosis', sans-serif;
+    color: #333;
+    text-transform: uppercase;   
+}
+/* le trait sius le titre */
+.contactBox .ProgressBar-contact::after{
+    content: '';
+    height: 1px;
+    width: 12%;
+    background: greenyellow;
+    position: absolute;
+    bottom: 14.7rem;
+    left: 62%;
+    transform: translateX(-50%); 
+}
+.ul-contact{
+    height: 80%;
+    width: inherit;
+    display: grid;
+    margin-top: -0.5rem;  
+}
+.ul-contact li{
+    position: relative;
+}
+.ul-contact li span{
+    color: rgb(216, 226, 235);
+}
+.ul-contact i{
+    font-size: 1.4rem;
+    transform: translateY(2px);
+    color: yellow;
+    padding: .9rem;
+}
+.ul-contact i span{
+    font-size: 1.4rem;
+    position: absolute;
+    transform: translateX(52px);
+    background: transparent;
+    border: none;
+    outline: none;
+    width: 350px;
+    transition: .2s ease; 
+}
+.clickInput:hover {
+    transform: translateX(56px);
+    cursor: pointer;
+}
+/****************************************************************************/
+/***********************FIN DE INFO PERSONNELLES*****************************/
+/****************************************************************************/
+
+/****************************************************************************/
+/***********************DEBUT DE INFORMATIQUE********************************/
+/****************************************************************************/
+.skill-list{
+    background: rgb(99, 164, 233);
+    width: 100%;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 26% 45% 35%;
+    grid-template-areas: 
+      "1"
+      "2"
+      "3";    
+}
+.skill-ul{
+    grid-area: 2;
+    background-image: radial-gradient(circle at 44% 67%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 30%,transparent 30%, transparent 34%,transparent 34%, transparent 100%),radial-gradient(circle at 33% 92%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 16%,transparent 16%, transparent 53%,transparent 53%, transparent 100%),radial-gradient(circle at 0% 46%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 42%,transparent 42%, transparent 61%,transparent 61%, transparent 100%),radial-gradient(circle at 47% 44%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 96%,transparent 96%, transparent 97%,transparent 97%, transparent 100%),radial-gradient(circle at 34% 28%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 26%,transparent 26%, transparent 85%,transparent 85%, transparent 100%),linear-gradient(260deg, rgb(48, 2, 209),rgb(100, 28, 120));
+    margin: 0 auto;
+    padding: 1rem 3rem;
+    z-index: 2;
+    border-radius: 25px;
+    box-shadow: 0 3px 10px #333;
+    width: 50%;
+    min-width: 600px;
+    min-height: 200px; 
+}
+.skill-ul li{
+    font-size: 1.4rem;
+    color: rgb(216, 226, 235);
+    padding: 0.2rem;
+    margin: 2px;
+}
+.skill-ul i{
+    font-size: 2rem;
+    margin: .4rem;
+    color: yellow;
+}
+/****************************************************************************/
+/***********************FIN DE INFORMATIQUE**********************************/
+/****************************************************************************/
+
+/****************************************************************************/
+/***********************DEBUT DE COMPETENCE**********************************/
+/****************************************************************************/
+.soft-skills{
+   background: rgb(99, 164, 233);
+    width: 100%;
+    overflow: hidden;
+} 
+.essaie {
+     background-image: radial-gradient(circle at 44% 67%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 30%,transparent 30%, transparent 34%,transparent 34%, transparent 100%),radial-gradient(circle at 33% 92%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 16%,transparent 16%, transparent 53%,transparent 53%, transparent 100%),radial-gradient(circle at 0% 46%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 42%,transparent 42%, transparent 61%,transparent 61%, transparent 100%),radial-gradient(circle at 47% 44%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 96%,transparent 96%, transparent 97%,transparent 97%, transparent 100%),radial-gradient(circle at 34% 28%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 26%,transparent 26%, transparent 85%,transparent 85%, transparent 100%),linear-gradient(260deg, rgb(48, 2, 209),rgb(100, 28, 120));
+    margin: 8rem auto;
+    padding: 20px 30px;
+    border-radius: 25px;
+    box-shadow: 0 3px 10px #333;
+    width: 50%;
+    min-width: 567px;
+    min-height: 290px;
+    color: rgb(216, 226, 235); 
+    font-size: 1.2rem;
+}  
+.animation{
+     padding: 20px 30px;
+    margin: 5px 0;
+    background: rgba(150, 128, 128, 0.385);
+}
+/****************************************************************************/
+/***********************FIN DE COMPETENCE************************************/
+/****************************************************************************/
+
+/****************************************************************************/
+/***********************DEBUT DE CENTRE D'INTERET****************************/
+/****************************************************************************/
+.interest-skills{
+    background: rgb(99, 164, 233);
+    width: 100%;
+    overflow: hidden;
+}
+.essaie-skills{
+    background-image: radial-gradient(circle at 44% 67%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 30%,transparent 30%, transparent 34%,transparent 34%, transparent 100%),radial-gradient(circle at 33% 92%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 16%,transparent 16%, transparent 53%,transparent 53%, transparent 100%),radial-gradient(circle at 0% 46%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 42%,transparent 42%, transparent 61%,transparent 61%, transparent 100%),radial-gradient(circle at 47% 44%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 96%,transparent 96%, transparent 97%,transparent 97%, transparent 100%),radial-gradient(circle at 34% 28%, hsla(75,0%,92%,0.1) 0%, hsla(75,0%,92%,0.1) 26%,transparent 26%, transparent 85%,transparent 85%, transparent 100%),linear-gradient(260deg, rgb(48, 2, 209),rgb(100, 28, 120));
+    margin: 8rem auto;
+    padding: 1rem 3rem;
+    border-radius: 25px;
+    box-shadow: 0 3px 10px #333;
+    width: 50%;
+    min-width: 567px;
+    min-height: 290px;
+    color: rgb(216, 226, 235);
+    font-size: 2.8rem;  
+}
+/****************************************************************************/
+/***********************FIN DE CENTRE D'INTERET******************************/
+/****************************************************************************/
+.formation-pro{
+    background-image: radial-gradient(circle at 69% 75%, hsla(65,0%,95%,0.05) 0%, hsla(65,0%,95%,0.05) 38%,transparent 38%, transparent 69%,transparent 69%, transparent 100%),radial-gradient(circle at 41% 58%, hsla(65,0%,95%,0.05) 0%, hsla(65,0%,95%,0.05) 3%,transparent 3%, transparent 75%,transparent 75%, transparent 100%),radial-gradient(circle at 94% 91%, hsla(65,0%,95%,0.05) 0%, hsla(65,0%,95%,0.05) 48%,transparent 48%, transparent 55%,transparent 55%, transparent 100%),radial-gradient(circle at 68% 38%, hsla(65,0%,95%,0.05) 0%, hsla(65,0%,95%,0.05) 34%,transparent 34%, transparent 36%,transparent 36%, transparent 100%),radial-gradient(circle at 81% 20%, hsla(65,0%,95%,0.05) 0%, hsla(65,0%,95%,0.05) 40%,transparent 40%, transparent 61%,transparent 61%, transparent 100%),radial-gradient(circle at 46% 37%, hsla(65,0%,95%,0.05) 0%, hsla(65,0%,95%,0.05) 37%,transparent 37%, transparent 76%,transparent 76%, transparent 100%),radial-gradient(circle at 49% 5%, hsla(65,0%,95%,0.05) 0%, hsla(65,0%,95%,0.05) 43%,transparent 43%, transparent 67%,transparent 67%, transparent 100%),radial-gradient(circle at 18% 58%, hsla(65,0%,95%,0.05) 0%, hsla(65,0%,95%,0.05) 4%,transparent 4%, transparent 20%,transparent 20%, transparent 100%),radial-gradient(circle at 43% 68%, hsla(65,0%,95%,0.05) 0%, hsla(65,0%,95%,0.05) 10%,transparent 10%, transparent 36%,transparent 36%, transparent 100%),linear-gradient(135deg, rgb(85, 133, 238),rgb(177, 145, 214));
+    width: 100%;
+    overflow: hidden;  
+    margin: 0.2rem .1rem;
+    padding: 1rem 3rem;
+}
+.forma-pro-titre{
+    color: rgb(216, 226, 235); 
+    font-family: 'Dosis', sans-serif;
+}
+.li-forma-pro{
+    color: rgb(9, 9, 9); 
+    margin: 1.5rem;
+}
+.li-exper-pro{
+   
+    margin: 1.5rem 2rem;  
+}
+.div-exper{
+    
+   margin-bottom: 1rem; 
+}
+/****************************************************************************/
+/***********************DEBUT DE ACCUEIL*************************************/
+/****************************************************************************/
+
+
+/****************************************************************************/
+/***********************FIN DE ACCUEIL***************************************/
+/****************************************************************************/
+    
+ 
